--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,7 @@ GenerateDefaultTimecodeFrameRate=(Numerator=30,Denominator=1)
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
+r.SupportSkyAtmosphereAffectsHeightFog=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 SpatializationPlugin=Built-in Spatialization
